# spis21-snaike-Arnav-Grant

./: best_weights.txt  feed_forward_neural_network.py  feed_forward_neural_network_modified.py  genetic_algorithm.py  main.py  main_new.py  pyproject.toml  sequential.py  snake.py  snake_new.py  weights.npy  weights_10_inputs.npy  weights_10b_inputs.npy
weights/: weights.npy  weights_10a_inputs.npy  weights_deathmatch_0.npy  weights_deathmatch_1.npy  weights_deathmatch_2.npy  weights_deathmatch_3.npy  weights_deathmatch_4.npy  weights_deathmatch_5.npy  weights_deathmatch_6.npy  weights_deathmatch_7.npy  weights_deathmatch_8.npy  weights_deathmatch_9.npy  weights_deathmatch_test_0.npy  weights_deathmatch_test_1.npy  weights_deathmatch_test_2.npy  weights_deathmatch_test_3.npy  weights_deathmatch_test_4.npy  weights_deathmatch_test_5.npy  weights_deathmatch_test_6.npy  weights_deathmatch_test_7.npy  weights_deathmatch_test_8.npy  weights_deathmatch_test_9.npy
