[tool.poetry]
name = "repl_python3_spis21-finalproject-Arnav-Grant"
version = "0.1.0"
description = ""
authors = ["CatFish47 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
